Added Row Highlight on Win Feature

--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,12 @@ body {
     text-align: center;
     width: 34px;
   }
-  
   .square:focus {
     outline: none;
   }
-  
+  .square-win{
+    background: yellow;
+  }
   .kbd-navigation .square:focus {
     background: #ddd;
   }
